--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "Weather app",
   "main": "weather.js",
-  "engines":{
-    "node": "14.x"
-  },
+  "type": "module",
   "scripts": {
+    "start": "node weather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kaushik",
